# legal-bot

./: .gitignore  TODO  pyproject.toml  requirements.txt
data/document_chunks/: companies_act_section_chunks.jsonl
data/document_structure/: companies_act_structure.json
data/document_vectors/individual/: companies_act_v1.index
src/legal_bot/intent/: intent_recognition.py
src/legal_bot/llm/: call_model.py
src/legal_bot/prompts/: prompt_manager.py
src/legal_bot/prompts/generation/: conversational_v1.prompt  legal_response_v1.prompt  summarise_v1.prompt
src/legal_bot/prompts/intent/: explain_section_v1.prompt  explain_section_v2.prompt  fallback_response.prompt  intent_recognition_v1.prompt
src/legal_bot/prompts/structured_output/: legal_answers.py
src/legal_bot/prompts/system/: base_system.prompt
src/legal_bot/rag/: search.py
streamlit/: app.py  utils.py
