[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-bot"
version = "0.1.0"
description = "Streamlit-based RAG chatbot for South African legislative documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # App/UI
  "streamlit==1.57.0",
  "altair==6.1.0",
  "rich==14.3.3",

  # Config
  "python-dotenv==1.2.2",
  "PyYAML==6.0.3",

  # Core AI/LLM + validation
  "openai==2.29.0",
  "pydantic==2.12.5",

  # Retrieval / RAG
  "faiss-cpu==1.13.2",
  "rank-bm25==0.2.2",
  "sentence-transformers==5.2.3",

  # Data/processing
  "numpy==2.4.3",
  "pandas==3.0.1",
  "regex==2026.2.28",
  "lxml==6.0.2",

  # Document tooling (keep if used)
  "PyMuPDF==1.27.2",
  "PyPDF2==3.0.1",
  "pdfminer.six==20260107",
  "pillow==12.1.1",
  "img2pdf==0.6.3",
  "pikepdf==10.5.0",

  # Optional API server stack (keep if you use it)
  "fastapi==0.135.1",
  "uvicorn==0.42.0",
]

[project.optional-dependencies]
dev = [
  "ipykernel==7.2.0",
  "ipython==9.11.0",
  "GitPython==3.1.49",
  "pytest",
  "ruff",
]

azure = [
  "azure-identity==1.25.3",
  "azure-core==1.38.3",
  "msal==1.35.1",
  "msal-extensions==1.3.1",
]

ocr = [
  "ocrmypdf==17.3.0",
  "pypdfium2==5.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["legal_bot*"]